--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + NextUI</title>
-    <meta key="title" content="Vite + NextUI" property="og:title" />
-    <meta content="Make beautiful websites regardless of your design experience." property="og:description" />
-    <meta content="Make beautiful websites regardless of your design experience." name="description" />
+    <title>Анкетирование</title>
+    <meta key="title" content="Анкетирование" property="og:title" />
     <meta
       key="viewport"
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
